--- a/xsd2jolie/nbproject/project.properties
+++ b/xsd2jolie/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.jar=${dist.dir}/xsd2jolie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.relaxngDatatype.jar=C:\\Jolie1_6_0\\lib\\relaxngDatatype.jar
-file.reference.xsom.jar=C:\\Jolie1_6_0\\lib\\xsom.jar
+file.reference.jaxp-api-1.4.5.jar=..\\jar\\jaxp-api-1.4.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.xsom.jar}:\
-    ${file.reference.relaxngDatatype.jar}
+    ${file.reference.jaxp-api-1.4.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +54,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.xsom.jar=C:\\Users\\maschio\\Downloads\\xsom-20100725-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
